Menclose with no notation attribute does not display anything. https://bugs.webkit.org/show_bug.cgi?id=127889

Patch by Gurpreet Kaur <k.gurpreet@samsung.com> on 2014-02-06
Reviewed by Chris Fleizach.

Source/WebCore:

Menclose with no notation attribute should behave same as menclose with
notation attribute with value as longdiv. By default the division
symbol should be displayed. For empty and invalid notation attribute
nothing should be displayed.

Tests: mathml/presentation/menclose-notation-default-longdiv.html
       mathml/presentation/menclose-notation-invalid-empty.html

* mathml/MathMLMencloseElement.h:
* rendering/mathml/RenderMathMLMenclose.cpp:
(WebCore::RenderMathMLMenclose::computePreferredLogicalWidths):
(WebCore::RenderMathMLMenclose::paint):
Added style for menclose with no notation attribute and handled this
condition in paint also where for longdiv we are explicitly drawing
the division symbol.

LayoutTests:

* mathml/presentation/menclose-notation-default-longdiv.html: Added.
* mathml/presentation/menclose-notation-invalid-empty-expected.html: Added.
* mathml/presentation/menclose-notation-invalid-empty.html: Added.
* platform/efl/mathml/presentation/menclose-notation-default-longdiv-expected.png: Added.
* platform/efl/mathml/presentation/menclose-notation-default-longdiv-expected.txt: Added.
* platform/gtk/mathml/presentation/menclose-notation-default-longdiv-expected.png: Added.
* platform/gtk/mathml/presentation/menclose-notation-default-longdiv-expected.txt: Added.
* platform/mac/mathml/presentation/menclose-notation-default-longdiv-expected.png: Added.
* platform/mac/mathml/presentation/menclose-notation-default-longdiv-expected.txt: Added.
Added new test cases to test the functionality of menclose with no
notation attribute, invalid and empty notation attribute.

Canonical link: https://commits.webkit.org/146326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163543 268f45cc-cd09-0410-ab3c-d52691b4dbfc